public/css/style.css
* {
    box-sizing: border-box;
    font-weight: 700;
  }
.navbar-brand {
  font-size: 2em;
}
#rules {
  font-size: 1.1em;
}
.col {
  border: 6px solid whitesmoke; 
  box-shadow: 2px 1px 0 grey;
  border-radius: 10px;
  background-color: #F8DFD3;
    
}
.blue-font {
  color: royalblue;
}
.red-font {
  color: crimson;
}

.spy-blue {
  border: 6px solid royalblue;
}
.spy-red {  
  border: 6px solid crimson;
}
.spy-assassin {
  border: 6px solid black;
}

.pick-assassin {
  border: 6px solid black;
  background-color: #1D1E1A;
  color: white;
  font-size: 5em;
  text-shadow: 0 0 0.2em grey, 0 0 0.2em whitesmoke;
}
.pick-red {
  border: 6px solid black;
  background-color: crimson;
  color: white;
  font-size: 5em;
  text-shadow: 0 0 0.1em whitesmoke, 0 0 0.2em grey, 0 0 0.2em whitesmoke, 0 0 0.5em whitesmoke;
}
.pick-blue {
  border: 6px solid black;
  background-color: royalblue;
  color: white;
  font-size: 4em;
  font-weight: 400;
  text-shadow: 0 0 0.2em grey, 0 0 0.2em whitesmoke;
}
.pick-bystander {
  border: 6px solid black;
  background-color:  #F8DFD3;
  color: white;
  font-size: 5em;
  font-weight: 300;
  text-shadow: 0 0 0.2em grey, 0 0 0.2em whitesmoke;
}

#new-game, #next-player, #turn-display, #card-display, #toggle-btns {
  display: none;

}

